Lots of CSS work. Fixed terrible wrapping-under-sidebar issue. Made columns work properly. Added navigation items and return to home option. Plenty of other changes.

--- a/css/default.css
+++ b/css/default.css
@@ -8,6 +8,7 @@ html, body {
     color: #333;
     background-color: #487FD9;
     height: 100%;
+    white-space: nowrap;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -29,29 +30,62 @@ h1 {
     min-width: 200px;
     width: 20%;
     background: url("/images/use_your_illusion.png");
-    /*background: black;*/
+    white-space: normal;
     box-shadow: 0px 2px 10px black;
+    overflow: hidden;
 }
 
 #sidebar-spacer {
-    min-width: 200px;
-    width: 20%;
-    height: 1px;
-    float: left;
+    margin: 0;
+    min-width: 190px;
+    width: 19%;
+    display: inline-block;
 }
 
-#sidebar img.portrait {
-    display: block;
-    width: 70%;
+#sidebar .portrait {
+    width: 75%;
+    padding-bottom: 75%;
     border-radius: 100em;
     border: 3px solid white;
     margin: 1em auto;
     cursor: pointer;
+    overflow: hidden;
+    height: 0;
 }
 
-#sidebar img.portrait:hover {
-
+#sidebar .portrait a img {
+    width: 100%;
 }
+
+#sidebar a.return-to-home {
+    display: block;
+    padding: 1em;
+    text-align: center;
+    background-color: rgba(0,0,0,0.5);
+}
+
+#sidebar nav {
+    margin: 1em 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#sidebar nav a {
+    flex: 1;
+    min-width: 30%;
+    padding: 1em;
+    white-space: nowrap;
+}
+
+#sidebar nav a:hover, #sidebar a.return-to-home:hover {
+    text-decoration: none;
+    background-color: #487FD9;
+}
+
+#sidebar nav a:nth-child(even) {
+    text-align: right;
+}
+
 
 #sidebar .name {
     color: white;
@@ -62,12 +96,15 @@ h1 {
 }
 
 #content {
-    padding-left: 1.5em;
+    padding-left: 2em;
     padding-right: 1.5em;
+    margin: 0;
     width: 60%;
-    float: left;
+    min-width: 300px;
+    display: inline-block;
     background-color: white;
     min-height: 100%;
+    white-space: normal;
 }
 
 #footer {
@@ -89,11 +126,11 @@ h1 {
     border-radius: 0.2em;
     overflow: hidden;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.8);
-    transition: all 0.2s;
+    transition: all 0.5s;
 }
 
 .project-card:hover {
-    box-shadow: 2px 2px 15px rgba(0,0,0,0.8);
+    box-shadow: 2px 2px 18px rgba(0,0,0,1);
 }
 
 .project-card .text-container {
@@ -135,10 +172,22 @@ h1 {
 .two-column {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.two-column > div {
+    flex: 1;
+}
+
+.two-column .posts-column {
+    min-width: 300px;
+    flex-grow: 3;
 }
 
 .two-column .projects-column {
     margin-left: 3em;
+    flex-grow: 1;
+    /*max-width: 20%;*/
 }
 
 a {
